// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filePathToClassnameDict > CSS > gets a dictionary of classnames and their location 1`] = `
{
  ".block--element__mod": {
    "comments": [],
    "declarations": [
      "color: green;",
    ],
    "position": {
      "column": 1,
      "line": 9,
    },
  },
  ".inMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 5,
      "line": 30,
    },
  },
  ".m-9": {
    "comments": [],
    "declarations": [
      "color: blue;",
    ],
    "position": {
      "column": 1,
      "line": 13,
    },
  },
  ".one": {
    "comments": [],
    "declarations": [
      "color: green;",
    ],
    "position": {
      "column": 1,
      "line": 5,
    },
  },
  ".single": {
    "comments": [],
    "declarations": [
      "color: red;",
    ],
    "position": {
      "column": 1,
      "line": 1,
    },
  },
  ".two": {
    "comments": [],
    "declarations": [
      "color: green;",
    ],
    "position": {
      "column": 5,
      "line": 5,
    },
  },
  ".💩": {
    "comments": [],
    "declarations": [
      "color: brown;",
    ],
    "position": {
      "column": 1,
      "line": 17,
    },
  },
  ".🔥🚒": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 1,
      "line": 21,
    },
  },
  ".🤢-_-😷": {
    "comments": [],
    "declarations": [
      "color: lime;",
    ],
    "position": {
      "column": 1,
      "line": 25,
    },
  },
}
`;

exports[`filePathToClassnameDict > CSS > gets a dictionary of nested classnames 1`] = `
{
  ".child": {
    "comments": [],
    "declarations": [
      "color: red;",
    ],
    "position": {
      "column": 5,
      "line": 7,
    },
  },
  ".inMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 5,
      "line": 33,
    },
  },
  ".inMedia__mod": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 9,
      "line": 36,
    },
  },
  ".parent": {
    "comments": [
      "* foo bar",
    ],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 6,
    },
  },
  ".parent--aa": {
    "comments": [],
    "declarations": [
      "color: rebeccapurple;",
    ],
    "position": {
      "column": 5,
      "line": 26,
    },
  },
  ".parent--bb": {
    "comments": [],
    "declarations": [
      "color: rebeccapurple;",
    ],
    "position": {
      "column": 5,
      "line": 26,
    },
  },
  ".parent--mod": {
    "comments": [],
    "declarations": [
      "color: green;",
    ],
    "position": {
      "column": 5,
      "line": 11,
    },
  },
  ".parent--mod--addon": {
    "comments": [],
    "declarations": [
      "color: lightgreen;",
    ],
    "position": {
      "column": 9,
      "line": 14,
    },
  },
  ".single": {
    "comments": [],
    "declarations": [
      "color: red;",
    ],
    "position": {
      "column": 1,
      "line": 1,
    },
  },
}
`;

exports[`filePathToClassnameDict > LESS > gets a dictionary of nested classnames from less files 1`] = `
{
  ".button": {
    "comments": [],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 14,
    },
  },
  ".button-cancel": {
    "comments": [],
    "declarations": [
      "background-image: url("cancel.png");",
    ],
    "position": {
      "column": 5,
      "line": 18,
    },
  },
  ".button-custom": {
    "comments": [],
    "declarations": [
      "background-image: url("custom.png");",
    ],
    "position": {
      "column": 5,
      "line": 22,
    },
  },
  ".button-ok": {
    "comments": [],
    "declarations": [
      "background-image: url("ok.png");",
    ],
    "position": {
      "column": 5,
      "line": 15,
    },
  },
  ".class": {
    "comments": [],
    "declarations": [
      "property: 1px * 2px;",
    ],
    "position": {
      "column": 1,
      "line": 52,
    },
  },
  ".container": {
    "comments": [],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 121,
    },
  },
  ".element": {
    "comments": [],
    "declarations": [
      "color: @@color;",
    ],
    "position": {
      "column": 5,
      "line": 74,
    },
  },
  ".inMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 5,
      "line": 112,
    },
  },
  ".inMedia__mod": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 9,
      "line": 115,
    },
  },
  ".inner": {
    "comments": [],
    "declarations": [
      "color: red;",
    ],
    "position": {
      "column": 5,
      "line": 98,
    },
  },
  ".inside-the-css-guard": {
    "comments": [],
    "declarations": [
      "color: white;",
    ],
    "position": {
      "column": 5,
      "line": 105,
    },
  },
  ".link": {
    "comments": [],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 27,
    },
  },
  ".linkish": {
    "comments": [],
    "declarations": [
      "color: cyan;",
    ],
    "position": {
      "column": 5,
      "line": 40,
    },
  },
  ".math": {
    "comments": [],
    "declarations": [
      "a: 1 + 1;",
      "b: 2px / 2;",
      "c: 2px ./ 2;",
      "d: (2px / 2);",
    ],
    "position": {
      "column": 1,
      "line": 45,
    },
  },
  ".mixin": {
    "comments": [
      "extend",
      "mixins",
    ],
    "declarations": [
      "box-shadow+: inset 0 0 10px #555;",
    ],
    "position": {
      "column": 1,
      "line": 88,
    },
  },
  ".my-optional-style": {
    "comments": [
      "parent selectos without &",
      "CSS Guards",
    ],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 104,
    },
  },
  ".myclass": {
    "comments": [],
    "declarations": [
      "box-shadow+: 0 0 20px black;",
    ],
    "position": {
      "column": 1,
      "line": 91,
    },
  },
  ".section": {
    "comments": [],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 71,
    },
  },
  ".single": {
    "comments": [],
    "declarations": [
      "color: red;",
    ],
    "position": {
      "column": 1,
      "line": 10,
    },
  },
  ".withinMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 9,
      "line": 123,
    },
  },
  ".withinMedia__mod": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 13,
      "line": 126,
    },
  },
}
`;

exports[`filePathToClassnameDict > SASS > gets a dictionary of nested classnames 1`] = `
{
  ".accordion": {
    "comments": [
      "parent selectors",
    ],
    "declarations": [
      "max-width: 600px;",
      "margin: 4rem auto;",
      "width: 90%;",
      "font-family: "Raleway", sans-serif;",
      "background: #f4f4f4;",
    ],
    "position": {
      "column": 1,
      "line": 55,
    },
  },
  ".accordion__copy": {
    "comments": [
      "variables",
    ],
    "declarations": [
      "display: none;",
      "padding: 1rem 1.5rem 2rem 1.5rem;",
      "color: gray;",
      "line-height: 1.6;",
      "font-size: 14px;",
      "font-weight: 500;",
    ],
    "position": {
      "column": 5,
      "line": 62,
    },
  },
  ".accordion__copy--open": {
    "comments": [],
    "declarations": [
      "display: block;",
    ],
    "position": {
      "column": 9,
      "line": 70,
    },
  },
  ".alert": {
    "comments": [],
    "declarations": [
      "border: 1px solid border-dark;",
    ],
    "position": {
      "column": 1,
      "line": 48,
    },
  },
  ".inMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 5,
      "line": 74,
    },
  },
  ".inMedia__mod": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 9,
      "line": 77,
    },
  },
  ".pulse": {
    "comments": [
      "mixins",
    ],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 35,
    },
  },
}
`;

exports[`filePathToClassnameDict > SCSS > gets a dictionary of nested classnames for \`"dashes"\` setting 1`] = `
{
  ".accordion": {
    "comments": [
      "parent selectors",
    ],
    "declarations": [
      "max-width: 600px;",
      "margin: 4rem auto;",
      "width: 90%;",
      "font-family: "Raleway", sans-serif;",
      "background: #f4f4f4;",
    ],
    "position": {
      "column": 1,
      "line": 69,
    },
  },
  ".accordion__copy": {
    "comments": [],
    "declarations": [
      "display: none;",
      "padding: 1rem 1.5rem 2rem 1.5rem;",
      "color: gray;",
      "line-height: 1.6;",
      "font-size: 14px;",
      "font-weight: 500;",
    ],
    "position": {
      "column": 5,
      "line": 76,
    },
  },
  ".accordion__copyOpen": {
    "comments": [],
    "declarations": [
      "display: block;",
    ],
    "position": {
      "column": 9,
      "line": 84,
    },
  },
  ".accordion__sm": {
    "comments": [],
    "declarations": [
      "width: 100%;",
    ],
    "position": {
      "column": 9,
      "line": 90,
    },
  },
  ".accordion__smShrink": {
    "comments": [],
    "declarations": [
      "width: 80%;",
    ],
    "position": {
      "column": 13,
      "line": 93,
    },
  },
  ".alert": {
    "comments": [
      "variables",
    ],
    "declarations": [
      "border: 1px solid $border-dark;",
    ],
    "position": {
      "column": 1,
      "line": 58,
    },
  },
  ".inMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 5,
      "line": 101,
    },
  },
  ".inMedia__mod": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 9,
      "line": 104,
    },
  },
  ".pulse": {
    "comments": [],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 46,
    },
  },
}
`;

exports[`filePathToClassnameDict > SCSS > gets a dictionary of nested classnames for \`false\` setting 1`] = `
{
  ".accordion": {
    "comments": [
      "parent selectors",
    ],
    "declarations": [
      "max-width: 600px;",
      "margin: 4rem auto;",
      "width: 90%;",
      "font-family: "Raleway", sans-serif;",
      "background: #f4f4f4;",
    ],
    "position": {
      "column": 1,
      "line": 69,
    },
  },
  ".accordion__copy": {
    "comments": [],
    "declarations": [
      "display: none;",
      "padding: 1rem 1.5rem 2rem 1.5rem;",
      "color: gray;",
      "line-height: 1.6;",
      "font-size: 14px;",
      "font-weight: 500;",
    ],
    "position": {
      "column": 5,
      "line": 76,
    },
  },
  ".accordion__copy--open": {
    "comments": [],
    "declarations": [
      "display: block;",
    ],
    "position": {
      "column": 9,
      "line": 84,
    },
  },
  ".accordion__sm": {
    "comments": [],
    "declarations": [
      "width: 100%;",
    ],
    "position": {
      "column": 9,
      "line": 90,
    },
  },
  ".accordion__sm--shrink": {
    "comments": [],
    "declarations": [
      "width: 80%;",
    ],
    "position": {
      "column": 13,
      "line": 93,
    },
  },
  ".alert": {
    "comments": [
      "variables",
    ],
    "declarations": [
      "border: 1px solid $border-dark;",
    ],
    "position": {
      "column": 1,
      "line": 58,
    },
  },
  ".inMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 5,
      "line": 101,
    },
  },
  ".inMedia__mod": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 9,
      "line": 104,
    },
  },
  ".pulse": {
    "comments": [],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 46,
    },
  },
}
`;

exports[`filePathToClassnameDict > SCSS > gets a dictionary of nested classnames for \`true\` setting 1`] = `
{
  ".accordion": {
    "comments": [
      "parent selectors",
    ],
    "declarations": [
      "max-width: 600px;",
      "margin: 4rem auto;",
      "width: 90%;",
      "font-family: "Raleway", sans-serif;",
      "background: #f4f4f4;",
    ],
    "position": {
      "column": 1,
      "line": 69,
    },
  },
  ".accordionCopy": {
    "comments": [],
    "declarations": [
      "display: none;",
      "padding: 1rem 1.5rem 2rem 1.5rem;",
      "color: gray;",
      "line-height: 1.6;",
      "font-size: 14px;",
      "font-weight: 500;",
    ],
    "position": {
      "column": 5,
      "line": 76,
    },
  },
  ".accordionCopyOpen": {
    "comments": [],
    "declarations": [
      "display: block;",
    ],
    "position": {
      "column": 9,
      "line": 84,
    },
  },
  ".accordionSm": {
    "comments": [],
    "declarations": [
      "width: 100%;",
    ],
    "position": {
      "column": 9,
      "line": 90,
    },
  },
  ".accordionSmShrink": {
    "comments": [],
    "declarations": [
      "width: 80%;",
    ],
    "position": {
      "column": 13,
      "line": 93,
    },
  },
  ".alert": {
    "comments": [
      "variables",
    ],
    "declarations": [
      "border: 1px solid $border-dark;",
    ],
    "position": {
      "column": 1,
      "line": 58,
    },
  },
  ".inMedia": {
    "comments": [],
    "declarations": [
      "color: hotpink;",
    ],
    "position": {
      "column": 5,
      "line": 101,
    },
  },
  ".inMediaMod": {
    "comments": [],
    "declarations": [
      "color: yellow;",
    ],
    "position": {
      "column": 9,
      "line": 104,
    },
  },
  ".pulse": {
    "comments": [],
    "declarations": [],
    "position": {
      "column": 1,
      "line": 46,
    },
  },
}
`;
